--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "cd client && npm start",
+    "build": "cd client && npm install && npm run build",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
